@@ -35,12 +35,13 @@ TODO:
 	<RULES
 		IGNORE_CASE="FALSE"
 		HIGHLIGHT_DIGITS="TRUE"
-		DIGIT_RE="(0[xX][0-9a-fA-F]+)|([0-9]+(\.[0-9]+)?([eE][+\-]?[0-9]+)?)">
+		NO_WORD_SEP="$_"
+		DIGIT_RE="(0b[01]+)|(0o[0-7]+)|(0x\p{XDigit}+)|(\d*\.?\d+(e[+-]?\d+)?)">
 
-		<SPAN TYPE="COMMENT2">
-			<BEGIN>###</BEGIN>
-			<END>###</END>
-		</SPAN>
+		<SPAN_REGEXP TYPE="COMMENT2" HASH_CHARS="###">
+			<BEGIN>###(?!#)</BEGIN>
+			<END REGEXP="TRUE">#{3,}</END>
+		</SPAN_REGEXP>
 		<EOL_SPAN TYPE="COMMENT1">#</EOL_SPAN>
 
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="FALSE" ESCAPE="\" DELEGATE="doubleQuoteLiteral">
@@ -68,13 +69,16 @@ TODO:
 			<END>`</END>
 		</SPAN>
 
-		<!-- Javascript-style regexps -->
-		<SEQ_REGEXP TYPE="MARKUP">(?&lt;!\d)\s*/(?![\s/*+{}?]).*/[igmy]*</SEQ_REGEXP>
 		<!-- Heregexps -->
 		<SPAN TYPE="MARKUP" DELEGATE="hereRegexp">
 			<BEGIN>///</BEGIN>
 			<END>///</END>
 		</SPAN>
+		<!-- Javascript-style regexps -->
+		<SPAN_REGEXP TYPE="MARKUP" HASH_CHAR="/" AT_WORD_START="TRUE" NO_LINE_BREAK="TRUE" ESCAPE="\">
+		    <BEGIN>/(?![\s=*])</BEGIN>
+		    <END REGEXP="TRUE">/[igmy]{0,4}</END>
+		</SPAN_REGEXP>
 
 		<MARK_PREVIOUS TYPE="FUNCTION" MATCH_TYPE="OPERATOR">(</MARK_PREVIOUS>
 		<!-- Seems to be equivalent to
@@ -105,8 +109,9 @@ TODO:
 		<SEQ TYPE="OPERATOR">~</SEQ>
 		<SEQ TYPE="OPERATOR">?</SEQ>
 
-		<SEQ_REGEXP TYPE="KEYWORD3">@([a-zA-Z\$_](\w|\$)*)</SEQ_REGEXP>
-		<SEQ_REGEXP TYPE="KEYWORD4">([a-zA-Z\$_](\w|\$)*)(?=\s*[:\.])</SEQ_REGEXP>
+		<SEQ_REGEXP TYPE="KEYWORD3">@([\p{IsAlphabetic}\$_][\p{IsAlnum}\$_]*)</SEQ_REGEXP>
+		<SEQ_REGEXP TYPE="KEYWORD4">([\p{IsAlphabetic}\$_][\p{IsAlnum}\$_]*)(?=\s*(?:[:\.]|\?\.))</SEQ_REGEXP>
+		<SEQ_REGEXP TYPE="KEYWORD1" AT_WORD_START="TRUE" HASH_CHARS="for ">for\s+own(?![$_\p{IsAlnum}])</SEQ_REGEXP>
 
 		<KEYWORDS>
 			<KEYWORD3>this</KEYWORD3>
@@ -132,19 +137,7 @@ TODO:
 			<KEYWORD1>extends</KEYWORD1>
 			<KEYWORD1>class</KEYWORD1>
 			<KEYWORD1>constructor</KEYWORD1>
-			<KEYWORD1>case</KEYWORD1>
-			<KEYWORD1>default</KEYWORD1>
 			<KEYWORD1>do</KEYWORD1>
-			<KEYWORD1>function</KEYWORD1>
-			<KEYWORD1>var</KEYWORD1>
-			<KEYWORD1>void</KEYWORD1>
-			<KEYWORD1>with</KEYWORD1>
-			<KEYWORD1>const</KEYWORD1>
-			<KEYWORD1>let</KEYWORD1>
-			<KEYWORD1>enum</KEYWORD1>
-			<KEYWORD1>export</KEYWORD1>
-			<KEYWORD1>import</KEYWORD1>
-			<KEYWORD1>native</KEYWORD1>
 			<KEYWORD1>then</KEYWORD1>
 			<KEYWORD1>unless</KEYWORD1>
 			<KEYWORD1>until</KEYWORD1>
@@ -172,6 +165,7 @@ TODO:
 			<KEYWORD3>String</KEYWORD3>
 
 			<!-- Literals -->
+			<LITERAL2>undefined</LITERAL2>
 			<LITERAL2>false</LITERAL2>
 			<LITERAL2>null</LITERAL2>
 			<LITERAL2>true</LITERAL2>
@@ -202,8 +196,12 @@ TODO:
 		</SPAN>
 	</RULES>
 
-	<!-- Comments in heregexes -->
+	<!-- Comments and #{} interpolation in heregexes -->
 	<RULES DEFAULT="MARKUP" SET="hereRegexp" ESCAPE="\">
+		<SPAN DELEGATE="MAIN" TYPE="OPERATOR">
+			<BEGIN>#{</BEGIN>
+			<END>}</END>
+		</SPAN>
 		<EOL_SPAN TYPE="COMMENT1">#</EOL_SPAN>
 	</RULES>
 
